--- a/interfaz.glade
+++ b/interfaz.glade
@@ -3,42 +3,41 @@
 <interface>
   <requires lib="gtk+" version="3.16"/>
   <object class="GtkAdjustment" id="aux_adj">
-    <property name="lower">4.5999999999999996</property>
-    <property name="upper">9.5999999999999996</property>
-    <property name="value">7.0999999999999996</property>
+    <property name="lower">4.7000000000000002</property>
+    <property name="upper">9.5</property>
+    <property name="value">4.7000000000000002</property>
     <property name="step_increment">1</property>
     <property name="page_increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="pitch_adj">
-    <property name="lower">4.5999999999999996</property>
-    <property name="upper">9.5999999999999996</property>
+    <property name="lower">4.7000000000000002</property>
+    <property name="upper">9.5</property>
     <property name="value">7.0999999999999996</property>
     <property name="step_increment">1</property>
     <property name="page_increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="roll_adj">
-    <property name="lower">4.5999999999999996</property>
-    <property name="upper">9.5999999999999996</property>
+    <property name="lower">4.7000000000000002</property>
+    <property name="upper">9.5</property>
     <property name="value">7.0999999999999996</property>
     <property name="step_increment">1</property>
     <property name="page_increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="throttle_adj">
-    <property name="lower">4.5999999999999996</property>
-    <property name="upper">9.5999999999999996</property>
-    <property name="value">4.5999999999999996</property>
+    <property name="lower">4.7000000000000002</property>
+    <property name="upper">9.5</property>
+    <property name="value">4.7000000000000002</property>
     <property name="step_increment">1</property>
     <property name="page_increment">0.01</property>
   </object>
   <object class="GtkAdjustment" id="yaw_adj">
-    <property name="lower">4.5999999999999996</property>
-    <property name="upper">9.5999999999999996</property>
+    <property name="lower">4.7000000000000002</property>
+    <property name="upper">9.5</property>
     <property name="value">7.0999999999999996</property>
     <property name="step_increment">1</property>
     <property name="page_increment">0.01</property>
   </object>
   <object class="GtkWindow" id="main_window">
-    <property name="height_request">300</property>
     <property name="can_focus">False</property>
     <property name="resizable">False</property>
     <property name="icon_name">applications-games</property>
@@ -49,97 +48,6 @@
         <property name="can_focus">False</property>
         <child>
           <object class="GtkBox">
-            <property name="width_request">100</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="margin_left">5</property>
-            <property name="margin_right">5</property>
-            <property name="margin_top">5</property>
-            <property name="margin_bottom">5</property>
-            <property name="orientation">vertical</property>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">ROLL/AILERON</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkScale" id="roll_scale">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="margin_bottom">5</property>
-                <property name="orientation">vertical</property>
-                <property name="adjustment">roll_adj</property>
-                <property name="inverted">True</property>
-                <property name="round_digits">1</property>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox">
-            <property name="width_request">100</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="margin_left">5</property>
-            <property name="margin_right">5</property>
-            <property name="margin_top">5</property>
-            <property name="margin_bottom">5</property>
-            <property name="orientation">vertical</property>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">PITCH/ELEVATOR</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkScale" id="pitch_scale">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="margin_bottom">5</property>
-                <property name="orientation">vertical</property>
-                <property name="adjustment">pitch_adj</property>
-                <property name="inverted">True</property>
-                <property name="round_digits">1</property>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox">
-            <property name="width_request">100</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">5</property>
@@ -161,6 +69,7 @@
             </child>
             <child>
               <object class="GtkScale" id="throttle_scale">
+                <property name="height_request">200</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_bottom">5</property>
@@ -168,6 +77,100 @@
                 <property name="adjustment">throttle_adj</property>
                 <property name="inverted">True</property>
                 <property name="round_digits">1</property>
+                <signal name="value-changed" handler="on_move_control" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <property name="width_request">80</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">5</property>
+            <property name="margin_right">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">YAW</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkScale" id="yaw_scale">
+                <property name="width_request">150</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="margin_bottom">5</property>
+                <property name="adjustment">yaw_adj</property>
+                <property name="round_digits">1</property>
+                <signal name="button-release-event" handler="on_release_control" swapped="no"/>
+                <signal name="value-changed" handler="on_move_control" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="margin_left">5</property>
+            <property name="margin_right">5</property>
+            <property name="margin_top">5</property>
+            <property name="margin_bottom">5</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">PITCH</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkScale" id="pitch_scale">
+                <property name="height_request">200</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="margin_bottom">5</property>
+                <property name="orientation">vertical</property>
+                <property name="adjustment">pitch_adj</property>
+                <property name="inverted">True</property>
+                <property name="round_digits">1</property>
+                <signal name="button-release-event" handler="on_release_control" swapped="no"/>
+                <signal name="value-changed" handler="on_move_control" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -184,7 +187,7 @@
         </child>
         <child>
           <object class="GtkBox">
-            <property name="width_request">100</property>
+            <property name="width_request">80</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">5</property>
@@ -196,7 +199,7 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">YAW/RUDDER</property>
+                <property name="label" translatable="yes">ROLL</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -205,14 +208,15 @@
               </packing>
             </child>
             <child>
-              <object class="GtkScale" id="yaw_scale">
+              <object class="GtkScale" id="roll_scale">
+                <property name="width_request">150</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_bottom">5</property>
-                <property name="orientation">vertical</property>
-                <property name="adjustment">yaw_adj</property>
-                <property name="inverted">True</property>
+                <property name="adjustment">roll_adj</property>
                 <property name="round_digits">1</property>
+                <signal name="button-release-event" handler="on_release_control" swapped="no"/>
+                <signal name="value-changed" handler="on_move_control" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
@@ -229,7 +233,6 @@
         </child>
         <child>
           <object class="GtkBox">
-            <property name="width_request">100</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">5</property>
@@ -251,6 +254,7 @@
             </child>
             <child>
               <object class="GtkScale" id="aux_scale">
+                <property name="height_request">200</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_bottom">5</property>
@@ -258,6 +262,7 @@
                 <property name="adjustment">aux_adj</property>
                 <property name="inverted">True</property>
                 <property name="round_digits">1</property>
+                <signal name="value-changed" handler="on_move_control" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
